# chatbot-template

./: .gitignore  .trivyignore  .trivyignore.yaml  AGENTS.md  Makefile  README.md  prek.toml
.agents/skills/frontend-pr-screenshot/: SKILL.md
.devcontainer/: post-create.sh
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/prompts/: address-review.md  update-deps.md
.github/workflows/: docker-compose.yml  prek.yaml  qa.yml  security.yml  tests.yml  tooling.yml
backend/: Dockerfile  locustfile.py  pyproject.toml
backend/app/: azure_client.py  config.py  main.py
backend/tests/: conftest.py  test_azure_client.py  test_config.py  test_main.py
code-quality-evals/: gpt-55-review.md  opus-47-review.md
frontend/: .fallowrc.json  .gitignore  .lighthouserc.json  Dockerfile  biome.json  eslint.config.js  frontend.nginx.conf  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/app/: styles.css
frontend/app/chat/: page.test.tsx  page.tsx
frontend/app/favicon/: site.webmanifest
frontend/client/: chatConstants.test.ts  chatConstants.ts  helpers.test.ts  helpers.ts  hooks.test.tsx  testUtils.tsx  theme.ts  useChatSetup.test.tsx  useChatSetup.ts  useDarkMode.test.tsx  useDarkMode.ts
frontend/client/types/: assistant.test.ts  assistant.ts
frontend/components/: ControlPanel.test.tsx  ControlPanel.tsx
frontend/components/messages/: AssistantMessage.test.tsx  AssistantMessage.tsx  ChatInput.test.tsx  ChatInput.tsx  MessageList.test.tsx  MessageList.tsx  UserMessage.tsx
frontend/components/parameters/: DropdownParameter.test.tsx
frontend/e2e-tests/: chat-page.spec.ts  visual.spec.ts
frontend/scripts/: contrast-audit.mjs  css-quality.mjs
makefiles/: backend.mk  frontend.mk
scripts/: check-repo-symlinks.py
